versioned_docs/version-6.0/client-api/operations/maintenance/indexes/disable-index.mdx
---
title: "Disable Index"
hide_table_of_contents: true
sidebar_label: Disable Index
sidebar_position: 6
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Disable Index
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* You can **disable a specific index** by either of the following:  
  * From the Client API - using `DisableIndexOperation`  
  * From Studio - see [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  
  * Via the file system

* To learn how to enable a disabled index, see [Enable index operation](../../../../client-api/operations/maintenance/indexes/enable-index.mdx).

* In this page:

    * [Overview](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#overview)
      * [Which node is the index disabled on?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#which-node-is-the-index-disabled-on) 
      * [What happens when the index is disabled?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#what-happens-when-the-index-is-disabled) 
  
    * [Disable index from the Client API](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-from-the-client-api)     
        * [Disable index - single node](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---single-node)
        * [Disable index - cluster wide](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---cluster-wide)
        * [Syntax](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#syntax)
  
    * [Disable index manually via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system)

</Admonition>
## Overview

#### Which node is the index disabled on?

* The index can be disabled either:  
    * On a single node, or  
    * Cluster wide - on all database-group nodes.  

* When disabling the index from the **client API** on a single node:  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When disabling an index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be disabled on the local node the browser is opened on, even if it is Not the preferred node.  

* When disabling the index [manually](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-via-the-file-system):  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.
#### What happens when the index is disabled?  

* No indexing will be done by a disabled index on the node where index is disabled.  
  However, new data will be indexed by the index on other database-group nodes where it is not disabled.

* You can still query the index,  
  but results may be stale when querying a node on which the index was disabled.  

* Disabling an index is a **persistent operation**:  
  * The index will remain disabled even after restarting the server or after [disabling/enabling](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) the database.  
  * To only pause the index and resume after a restart see: [pause index operation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  



## Disable index from the Client API

#### Disable index - single node:

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the disable index operation
// Use this overload to disable on a single node
var disableIndexOp = new DisableIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(disableIndexOp);

// At this point, the index is disabled only on the 'preferred node'
// New data will not be indexed on this node only
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the disable index operation
// Use this overload to disable on a single node
var disableIndexOp = new DisableIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(disableIndexOp);

// At this point, the index is disabled only on the 'preferred node'
// New data will not be indexed on this node only
`}
</CodeBlock>
</TabItem>
</Tabs>
#### Disable index - cluster wide:

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the disable index operation
// Pass 'true' to disable the index on all nodes in the database-group
var disableIndexOp = new DisableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(disableIndexOp);

// At this point, the index is disabled on ALL nodes
// New data will not be indexed
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the disable index operation
// Pass 'true' to disable the index on all nodes in the database-group
var disableIndexOp = new DisableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(disableIndexOp);

// At this point, the index is disabled on ALL nodes
// New data will not be indexed
`}
</CodeBlock>
</TabItem>
</Tabs>
#### Syntax:  

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`// Available overloads:
public DisableIndexOperation(string indexName)
public DisableIndexOperation(string indexName, bool clusterWide)
`}
</CodeBlock>
</TabItem>

| Parameter       | Type     | Description                                                                                                              |
|-----------------|----------|--------------------------------------------------------------------------------------------------------------------------|
| **indexName**   | `string` | Name of index to disable                                                                                                 |
| **clusterWide** | `bool`   | `true` - Disable index on all database-group nodes<br/>`false` - Disable index only on a single node (the preferred node) |



## Disable index manually via the file system

* It may sometimes be useful to disable an index manually, through the file system.  
  For example, a faulty index may load before [DisableIndexOperation](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disableindexoperation) gets a chance to disable it.  
  Manually disabling the index will ensure that the index is not loaded.  

* To **manually disable** an index:  

  * Place a file named `disable.marker` in the [index directory](../../../../server/storage/directory-structure.mdx).  
    Indexes are kept under the database directory, each index in a directory whose name is similar to the index's.   
  * The `disable.marker` file can be empty,  
    and can be created by any available method, e.g. using the File Explorer, a terminal, or code.  

* Attempting to use a manually disabled index will generate the following exception:  

           Unable to open index: '&#123;IndexName&#125;', 
           it has been manually disabled via the file: '&#123;disableMarkerPath&#125;'.  
           To re-enable, remove the disable.marker file and enable indexing.`

* To **enable** a manually disabled index:  

  * First, remove the `disable.marker` file from the index directory.
  * Then, enable the index by any of the options described in: [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index).




</LanguageContent>
<LanguageContent language="java">


The **DisableIndexOperation** is used to turn the indexing off for a given index. Querying a `disabled` index is allowed, but it may return stale results.

<Admonition type="note" title="Note">
Unlike [StopIndex](../../../../client-api/operations/maintenance/indexes/stop-index.mdx) or [StopIndexing](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx) disable index is a persistent operation, so the index remains disabled even after a server restart.
</Admonition>


## Syntax

<TabItem value="disable_1" label="disable_1">
<CodeBlock language="java">
{`public DisableIndexOperation(String indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexName** | String | name of an index to disable indexing |

## Example

<TabItem value="disable_2" label="disable_2">
<CodeBlock language="java">
{`store.maintenance().send(new DisableIndexOperation("Orders/Totals"));
// index is disabled at this point, new data won't be indexed
// but you can still query on this index
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* You can **disable a specific index** by either of the following:  
  * From the Client API - using `DisableIndexOperation`  
  * From Studio - see [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  
  * Via the file system

* To learn how to enable a disabled index, see [Enable index operation](../../../../client-api/operations/maintenance/indexes/enable-index.mdx).

* In this page:

    * [Overview](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#overview)
      * [Which node is the index disabled on?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#which-node-is-the-index-disabled-on) 
      * [What happens when the index is disabled?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#what-happens-when-the-index-is-disabled) 
  
    * [Disable index from the Client API](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-from-the-client-api)     
        * [Disable index - single node](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---single-node)
        * [Disable index - cluster wide](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---cluster-wide)
        * [Syntax](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#syntax)
  
    * [Disable index manually via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system)

</Admonition>
## Overview

#### Which node is the index disabled on?

* The index can be disabled either:  
    * On a single node, or  
    * Cluster wide - on all database-group nodes.  

* When disabling the index from the **client API** on a single node:  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When disabling an index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be disabled on the local node the browser is opened on, even if it is Not the preferred node.  

* When disabling the index [manually](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-via-the-file-system):  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.
#### What happens when the index is disabled?  

* No indexing will be done by a disabled index on the node where index is disabled.  
  However, new data will be indexed by the index on other database-group nodes where it is not disabled.

* You can still query the index,  
  but results may be stale when querying a node on which the index was disabled.  

* Disabling an index is a **persistent operation**:  
  * The index will remain disabled even after restarting the server or after [disabling/enabling](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) the database.  
  * To only pause the index and resume after a restart see: [pause index operation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  



## Disable index from the Client API

#### Disable index - single node:

<TabItem value="disable_1" label="disable_1">
<CodeBlock language="python">
{`# Define the disable index operation
# Use this args set to disable on a single node
disable_index_op = DisableIndexOperation("Orders/Totals")

# Execute the operation by passing it to maintenance.send
store.maintenance.send(disable_index_op)

# At this point, the index is disabled only on the 'preferred node'
# New data will not be indexed on this node only
`}
</CodeBlock>
</TabItem>
#### Disable index - cluster wide:

<TabItem value="disable_2" label="disable_2">
<CodeBlock language="python">
{`# Define the disable index operation
# Pass 'True' to disable the index on all nodes in the database-group
disable_index_op = DisableIndexOperation("Orders/Totals", True)

# Execute the operation by passing it to maintenance.send
store.maintenance.send(disable_index_op)

# At this point, the index is disabled on ALL nodes
# New data will not be indexed
`}
</CodeBlock>
</TabItem>
#### Syntax:  

<TabItem value="syntax" label="syntax">
<CodeBlock language="python">
{`class DisableIndexOperation(VoidMaintenanceOperation):
    def __init__(self, index_name: str, cluster_wide: bool = False): ...
`}
</CodeBlock>
</TabItem>

| Parameter        | Type   | Description                                                                                                              |
|------------------|--------|--------------------------------------------------------------------------------------------------------------------------|
| **index_name**   | `str`  | Name of index to disable                                                                                                 |
| **cluster_wide** | `bool` | `True` - Disable index on all database-group nodes<br/>`False` - Disable index only on a single node (the preferred node) |



## Disable index manually via the file system

* It may sometimes be useful to disable an index manually, through the file system.  
  For example, a faulty index may load before [DisableIndexOperation](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disableindexoperation) gets a chance to disable it.  
  Manually disabling the index will ensure that the index is not loaded.  

* To **manually disable** an index:  

  * Place a file named `disable.marker` in the [index directory](../../../../server/storage/directory-structure.mdx).  
    Indexes are kept under the database directory, each index in a directory whose name is similar to the index's.   
  * The `disable.marker` file can be empty,  
    and can be created by any available method, e.g. using the File Explorer, a terminal, or code.  

* Attempting to use a manually disabled index will generate the following exception:  

           Unable to open index: '&#123;IndexName&#125;', 
           it has been manually disabled via the file: '&#123;disableMarkerPath&#125;'.  
           To re-enable, remove the disable.marker file and enable indexing.`

* To **enable** a manually disabled index:  

  * First, remove the `disable.marker` file from the index directory.
  * Then, enable the index by any of the options described in: [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index).




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* You can **disable a specific index** by either of the following:  
  * From the Client API - using `DisableIndexOperation`  
  * From Studio - see [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  
  * Via the file system

* To learn how to enable a disabled index, see [Enable index operation](../../../../client-api/operations/maintenance/indexes/enable-index.mdx).

* In this page:

    * [Overview](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#overview)
      * [Which node is the index disabled on?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#which-node-is-the-index-disabled-on) 
      * [What happens when the index is disabled?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#what-happens-when-the-index-is-disabled) 
  
    * [Disable index from the Client API](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-from-the-client-api)     
        * [Disable index - single node](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---single-node)
        * [Disable index - cluster wide](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---cluster-wide)
        * [Syntax](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#syntax)
  
    * [Disable index manually via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system)

</Admonition>
## Overview

#### Which node is the index disabled on?

* The index can be disabled either:  
    * On a single node, or  
    * Cluster wide - on all database-group nodes.  

* When disabling the index from the **client API** on a single node:  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When disabling an index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be disabled on the local node the browser is opened on, even if it is Not the preferred node.  

* When disabling the index [manually](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-via-the-file-system):  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.
#### What happens when the index is disabled?  

* No indexing will be done by a disabled index on the node where index is disabled.  
  However, new data will be indexed by the index on other database-group nodes where it is not disabled.

* You can still query the index,  
  but results may be stale when querying a node on which the index was disabled.  

* Disabling an index is a **persistent operation**:  
  * The index will remain disabled even after restarting the server or after [disabling/enabling](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) the database.  
  * To only pause the index and resume after a restart see: [pause index operation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  



## Disable index from the Client API

#### Disable index - single node:

<TabItem value="disable_1" label="disable_1">
<CodeBlock language="php">
{`// Define the disable index operation
// Use this overload to disable on a single node
$disableIndexOp = new DisableIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($disableIndexOp);

// At this point, the index is disabled only on the 'preferred node'
// New data will not be indexed on this node only
`}
</CodeBlock>
</TabItem>
#### Disable index - cluster wide:

<TabItem value="disable_2" label="disable_2">
<CodeBlock language="php">
{`// Define the disable index operation
// Pass 'true' to disable the index on all nodes in the database-group
$disableIndexOp = new DisableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($disableIndexOp);

// At this point, the index is disabled on ALL nodes
// New data will not be indexed
`}
</CodeBlock>
</TabItem>
#### Syntax:  

<TabItem value="syntax" label="syntax">
<CodeBlock language="php">
{`DisableIndexOperation(?string $indexName, bool $clusterWide = false)
`}
</CodeBlock>
</TabItem>

| Parameter        | Type   | Description                                                                                                              |
|------------------|--------|--------------------------------------------------------------------------------------------------------------------------|
| **$indexName**   | `?string` | Name of index to disable                                                                                              |
| **$clusterWide** | `bool` | `true` - Disable index on all database-group nodes<br/>`false` - Disable index only on a single node (the preferred node) |



## Disable index manually via the file system

* It may sometimes be useful to disable an index manually, through the file system.  
  For example, a faulty index may load before [DisableIndexOperation](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disableindexoperation) gets a chance to disable it.  
  Manually disabling the index will ensure that the index is not loaded.  

* To **manually disable** an index:  

  * Place a file named `disable.marker` in the [index directory](../../../../server/storage/directory-structure.mdx).  
    Indexes are kept under the database directory, each index in a directory whose name is similar to the index's.   
  * The `disable.marker` file can be empty,  
    and can be created by any available method, e.g. using the File Explorer, a terminal, or code.  

* Attempting to use a manually disabled index will generate the following exception:  

           Unable to open index: '&#123;IndexName&#125;', 
           it has been manually disabled via the file: '&#123;disableMarkerPath&#125;'.  
           To re-enable, remove the disable.marker file and enable indexing.`

* To **enable** a manually disabled index:  

  * First, remove the `disable.marker` file from the index directory.
  * Then, enable the index by any of the options described in: [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index).




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* You can **disable a specific index** by either of the following:  
  * From the Client API - using `DisableIndexOperation`  
  * From Studio - see [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  
  * Via the file system

* To learn how to enable a disabled index, see [Enable index operation](../../../../client-api/operations/maintenance/indexes/enable-index.mdx).

* In this page:

    * [Overview](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#overview)
      * [Which node is the index disabled on?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#which-node-is-the-index-disabled-on) 
      * [What happens when the index is disabled?](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#what-happens-when-the-index-is-disabled) 
  
    * [Disable index from the Client API](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-from-the-client-api)     
        * [Disable index - single node](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---single-node)
        * [Disable index - cluster wide](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index---cluster-wide)
        * [Syntax](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#syntax)
  
    * [Disable index manually via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system)

</Admonition>
## Overview

#### Which node is the index disabled on?

* The index can be disabled either:  
    * On a single node, or  
    * Cluster wide - on all database-group nodes.  

* When disabling the index from the **client API** on a single node:  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When disabling an index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be disabled on the local node the browser is opened on, even if it is Not the preferred node.  

* When disabling the index [manually](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-via-the-file-system):  
  The index will be disabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.
#### What happens when the index is disabled?  

* No indexing will be done by a disabled index on the node where index is disabled.  
  However, new data will be indexed by the index on other database-group nodes where it is not disabled.

* You can still query the index,  
  but results may be stale when querying a node on which the index was disabled.  

* Disabling an index is a **persistent operation**:  
  * The index will remain disabled even after restarting the server or after [disabling/enabling](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) the database.  
  * To only pause the index and resume after a restart see: [pause index operation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  



## Disable index from the Client API

#### Disable index - single node:

<TabItem value="disable_1" label="disable_1">
<CodeBlock language="js">
{`// Define the disable index operation
// Use this overload to disable on a single node
const disableIndexOp = new DisableIndexOperation("Orders/Totals");

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(disableIndexOp);

// At this point, the index is disabled only on the 'preferred node'
// New data will not be indexed on this node only
`}
</CodeBlock>
</TabItem>
#### Disable index - cluster wide:

<TabItem value="disable_2" label="disable_2">
<CodeBlock language="js">
{`// Define the disable index operation
// Pass 'true' to disable the index on all nodes in the database-group
const disableIndexOp = new DisableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(disableIndexOp);

// At this point, the index is disabled on ALL nodes
// New data will not be indexed
`}
</CodeBlock>
</TabItem>
#### Syntax:  

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const disableIndexOp = new DisableIndexOperation(indexName, clusterWide = false);
`}
</CodeBlock>
</TabItem>

| Parameter       | Type      | Description                                                                                                              |
|-----------------|-----------|--------------------------------------------------------------------------------------------------------------------------|
| **indexName**   | `string`  | Name of index to disable                                                                                                 |
| **clusterWide** | `boolean` | `true` - Disable index on all database-group nodes<br/>`false` - Disable index only on a single node (the preferred node) |



## Disable index manually via the file system

* It may sometimes be useful to disable an index manually, through the file system.  
  For example, a faulty index may load before [DisableIndexOperation](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disableindexoperation) gets a chance to disable it.  
  Manually disabling the index will ensure that the index is not loaded.

* To **manually disable** an index:

    * Place a file named `disable.marker` in the [index directory](../../../../server/storage/directory-structure.mdx).  
      Indexes are kept under the database directory, each index in a directory whose name is similar to the index's.
    * The `disable.marker` file can be empty,  
      and can be created by any available method, e.g. using the File Explorer, a terminal, or code.

* Attempting to use a manually disabled index will generate the following exception:

           Unable to open index: '&#123;IndexName&#125;', 
           it has been manually disabled via the file: '&#123;disableMarkerPath&#125;'.  
           To re-enable, remove the disable.marker file and enable indexing.`

* To **enable** a manually disabled index:

    * First, remove the `disable.marker` file from the index directory.
    * Then, enable the index by any of the options described in: [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index).




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Index Administration](../../../../indexes/index-administration)
- [Enable Index](../../../../client-api/operations/maintenance/indexes/enable-index)

### Operations
- [What are operations](../../../../client-api/operations/what-are-operations)
- [How to Enable Index](../../../../client-api/operations/maintenance/indexes/enable-index)
- [How to Pause Index Until Restart](../../../../client-api/operations/maintenance/indexes/stop-index)


-->